# ibu

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: io.rs
examples/: parallel.rs  random.rs  roundtrip.rs
src/: error.rs  lib.rs  parallel.rs
src/constructs/: header.rs  ibu.rs  mod.rs  record.rs
src/io/: mmap.rs  mod.rs  read.rs  reader.rs  write.rs  writer.rs
