[package]
name = "ibu"
version = "0.2.0"
authors = ["Noam Teyssier <noam.teyssier@arcinstitute.org"]
repository = "https://github.com/noamteyssier/ibu"
documentation = "https://docs.rs/ibu"
description = "A library for high throughput binary encoding genomic sequences"
edition = "2021"
license = "MIT"
keywords = ["bioinformatics", "genomics", "binary", "encoding", "compression"]
categories = ["science", "data-structures", "encoding"]


[dependencies]
bytemuck = { version = "1.24.0", features = ["derive", "extern_crate_alloc"] }
memmap2 = "0.9.9"
niffler = {version = "3.0.0", optional = true }
num_cpus = "1.17.0"
serde = { version = "1.0.228", features = ["derive"], optional = true }
thiserror = "2.0.17"

[features]
default = ["serde", "niffler"]
serde = ["dep:serde"]
niffler = ["dep:niffler"]
